# organism-backend

./: .env.example  .env.example.md  .gitignore  Dockerfile  EcodiaOS_Spec_12_Soma_Homeostatic_Manifold.md  README.md  REPAIR_LEARNING_INTEGRATION.md  REPAIR_LEARNING_README.md  REPAIR_LEARNING_SUMMARY.txt  REPAIR_LEARNING_VALIDATION.md  SYNAPSE_AUDIT.md  SYNAPSE_TRIAGE.md  Soma_Implementation_Prompts.md  check_balance.py  config.py  dataset_clean.jsonl  docker-compose.dev.yaml  docker-compose.yaml  examplenv.env  examples.jsonl  fixed.json  fj.py  genesis_trigger.py  kill_uvicorn.bat  kill_uvicorn.sh  main.py  phantom_recon.py  poke_bounties.py  poke_solve.py  pyproject.toml  run_inspector.py  simula_worker.py  skia_worker.py  start.sh  test_all_incident_types.py  test_economic_mutation.py  test_hello_world.py  tier2_orchestrator.py  triad_simulator.py  trigger_reload.py
api/middleware/: error_capture.py
api/monetization/: __init__.py  auth.py  ledger.py  router.py  types.py
api/routers/: axon.py  benchmarks.py  eis.py  equor.py  fast_path.py  federation.py  identity.py  kairos.py  legal.py  logs.py  memory.py  mitosis.py  nova.py  observatory.py  oikos.py  phantom_liquidity.py  sacm.py  simula.py  skia.py  (+4 more)
cli/: evaluate.py  observatory.py  simula.py  training_data.py  training_run.py
clients/: __init__.py  algora.py  browser_client.py  captcha_client.py  context_compression.py  email_client.py  embedding.py  file_watcher.py  github.py  llm.py  model_hotswap.py  neo4j.py  optimized_llm.py  output_validator.py  prompt_cache.py  redis.py  scheduler.py  timescaledb.py  token_budget.py  wallet.py  web_client.py
config/: default.yaml  local.yaml
core/: CLAUDE.md  __init__.py  continuous_learning_orchestrator.py  crash_pattern_analyzer.py  curriculum_builder.py  helpers.py  hot_deploy.py  hotreload.py  infra.py  inner_life.py  interoception_loop.py  re_evaluator.py  re_training_exporter.py  registry.py  scheduled_tasks.py  smoke_test.py  wiring.py
database/: __init__.py  migrations.py
interfaces/: __init__.py
observatory/: __init__.py  closure_tracker.py  spec_checker.py  tracer.py
primitives/: __init__.py  affect.py  belief.py  blockchain.py  causal.py  closure.py  common.py  constitutional.py  episodes.py  evolution.py  evolutionary.py  experimental.py  expression.py  fast_path.py  federation.py  genome.py  genome_inheritance.py  governance.py  incident.py  intent.py  logos.py  memory_trace.py  metabolic.py  mitosis.py  percept.py  re_training.py  soma.py  telemetry.py  vitality.py
prompts/: __init__.py
scripts/: federation_keygen.py  promote_autonomy.py  purge_stale_goals.py  synapse_audit.py  verify_autonomous_loop.py
systems/: genome_helpers.py
telemetry/: __init__.py  llm_metrics.py  log_analyzer.py  logging.py  metrics.py  publisher.py
tests/: conftest.py  run_thymos_manual.py  test_eis_fast_path.py  test_health_check_fixes.py
utils/: asyncio_helpers.py  supervision.py
wandb/: latest-run
(+894 files in other folders)
