[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecodiaos"
version = "0.1.0"
description = "EcodiaOS — A living digital organism"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "bs4",
    "websockets>=14.0",
    "httpx>=0.28.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",

    # Database clients
    "neo4j>=5.27.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",

    # LLM providers
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "boto3>=1.26.0",  # AWS Bedrock support

    # Embeddings
    "sentence-transformers>=3.4.0",
    "numpy>=2.2.0",

    # Logging & observability
    "structlog>=24.4.0",
    "orjson>=3.10.0",

    # Cryptography (Federation identity + wallet seed encryption)
    "cryptography>=44.0.0",

    # Web3 — Coinbase Developer Platform SDK (Phase 2: Metabolic Layer)
    "cdp-sdk>=0.14.0",
    "web3>=7.0.0",

    # Utilities
    "python-ulid>=3.0.0",

    # Stage 2B: Z3 SMT solver for invariant verification
    "z3-solver>=4.13.0",

    # Hunter dynamic execution — Docker SDK for live detonation chamber
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "testcontainers[neo4j]>=4.10.0",
    # Stage 2C: Static analysis tools
    "bandit>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "clients", "core", "database", "infrastructure", "interfaces", "primitives", "prompts", "systems", "telemetry", "utils"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"systems/equor/main.py" = ["E402"]
"systems/simula/verification/incremental.py" = ["E402"]
"skia_worker.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
    "boto3",
    "boto3.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "z3",
    "z3.*",
    "psutil",
    "docker",
    "docker.*",
    "cdp",
    "cdp.*",
    "web3",
    "web3.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "main",
    "systems.equor.main",
    "systems.simula.service",
    "systems.simula.*",
    "systems.thread.identity_schema_engine",
    "systems.thread.commitment_keeper",
    "systems.thread.diachronic_coherence",
    "systems.thread.narrative_synthesizer",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
